# ft-pl

./: .gitignore  eval_models  guide.md  pyproject.toml
data/: dataset.jsonl
finetune_output/: README.md
scripts/: README.md  download_base_model.py  evaluate_models.py  merge.py  run_pipeline.py  run_pipeline.sh
