[project]
name = "fine-tune-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Cstannahill",email = "cstannahill10@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets (>=3.6.0,<4.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "transformers (>=4.53.1,<5.0.0)",
    "peft (>=0.16.0,<0.17.0)",
    "huggingface-hub (>=0.33.2,<0.34.0)",
    "colorama (>=0.4.6,<0.5.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
